--- a/client/src/index.css
+++ b/client/src/index.css
@@ -4,8 +4,20 @@
   box-sizing: border-box;
 }
 
-body {
+body, html {
   margin: 0 auto;
   max-width: 1400px;
   background-color: #ededed;
+}
+
+/* Fixes Vertical Scroll */
+::-webkit-scrollbar {
+  -webkit-appearance: none;
+  width: 7px;
+}
+
+::-webkit-scrollbar-thumb {
+  border-radius: 4px;
+  background-color: rgba(0, 0, 0, .5);
+  box-shadow: 0 0 1px rgba(255, 255, 255, .5);
 }
